[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/Castle.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Men2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/HP/StickBarricade.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HP/HPBarricade.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Castle/Castle2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Castle/Castle1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Castle/Castle3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Door/1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Door/2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Door/3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Door/5.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Door/4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Door/6.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Castle/door.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Startgame.tscn" type="PackedScene" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 142.247

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 240.515, 46.9947 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 230.028, 88.1623 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 233.299, 87.9421 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 139.807, 173.658 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -40.2728, -96.56 )
b = Vector2( -39.6979, 91.6897 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -885.782, 296.345 )
b = Vector2( -949.339, 208.196 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 957.374, 224.599 )
b = Vector2( 887.473, 306.957 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 944.954, 29.091 )
b = Vector2( 949.94, 224.778 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 107.153
height = 189.505

[sub_resource type="CapsuleShape2D" id=11]
radius = 105.165
height = 197.897

[sub_resource type="SegmentShape2D" id=12]
a = Vector2( 414.797, 144.281 )
b = Vector2( 1, -24.8047 )

[sub_resource type="SegmentShape2D" id=13]
a = Vector2( -355.577, 389.08 )
b = Vector2( -275.671, 440.263 )

[sub_resource type="SegmentShape2D" id=14]
a = Vector2( -112.259, 491.702 )
b = Vector2( -275.18, 440.566 )

[sub_resource type="SegmentShape2D" id=15]
a = Vector2( 370.656, 380.167 )
b = Vector2( 281.214, 444.602 )

[sub_resource type="SegmentShape2D" id=16]
a = Vector2( 281.214, 443.412 )
b = Vector2( 115.162, 493.049 )

[sub_resource type="SegmentShape2D" id=17]
a = Vector2( 2.15173, -24.8185 )
b = Vector2( -404.688, 147.813 )

[sub_resource type="SegmentShape2D" id=18]
a = Vector2( 551.63, 21.9728 )
b = Vector2( 553.415, 148.848 )

[sub_resource type="SegmentShape2D" id=19]
a = Vector2( -546.818, 148.872 )
b = Vector2( -551.061, 27.2497 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 140.876, 194.583 )

[sub_resource type="SegmentShape2D" id=21]
a = Vector2( 370.055, 377.319 )
b = Vector2( 419.552, 312.265 )

[sub_resource type="SegmentShape2D" id=22]
a = Vector2( -355.046, 389.236 )
b = Vector2( -404.934, 315.093 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 258.593, 12.8747 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "door",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "lying",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 827.108, 476.729 )

[sub_resource type="CapsuleShape2D" id=26]
radius = 237.976
height = 407.294

[node name="Castle" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="HP_bar" parent="." index="0"]
visible = false
margin_left = -75.0
margin_top = -175.0
margin_right = 77.9999
margin_bottom = -114.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="HitBox" parent="." index="1"]
visible = false

[node name="BiteArea" type="Area2D" parent="." index="2"]
scale = Vector2( 1.50926, 1.67857 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteArea" index="0"]
position = Vector2( -0.397278, 152.856 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BiteArea" index="1"]
position = Vector2( 5.90293, 157.102 )
shape = SubResource( 2 )

[node name="Sprite6" type="Sprite" parent="." index="3"]
position = Vector2( 0.793686, 361.976 )
scale = Vector2( 1.3651, 1.67729 )
z_index = -1
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="." index="4"]
scale = Vector2( 1.3, 1.3 )
z_index = -1
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="." index="5"]
scale = Vector2( 1.3, 1.3 )
z_index = 4
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="." index="6"]
scale = Vector2( 1.3, 1.3 )
z_index = 2
texture = ExtResource( 7 )

[node name="Startgame" parent="." index="7" instance=ExtResource( 15 )]
position = Vector2( -4.23785, 179.049 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="8"]
z_index = 3

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 645.384, 231.064 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D" index="1"]
position = Vector2( -638.471, 234.412 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="2"]
position = Vector2( 753.968, 190.625 )
shape = SubResource( 5 )

[node name="Coll_Alive" type="CollisionShape2D" parent="StaticBody2D" index="3"]
position = Vector2( -909.596, 118.86 )
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D" index="4"]
position = Vector2( -0.33374, 1.49829 )
shape = SubResource( 7 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D" index="5"]
shape = SubResource( 8 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D" index="6"]
position = Vector2( 7.1272, 0.8909 )
shape = SubResource( 9 )

[node name="L" type="CollisionShape2D" parent="StaticBody2D" index="7"]
position = Vector2( -749.985, 19.799 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="R" type="CollisionShape2D" parent="StaticBody2D" index="8"]
position = Vector2( 751.687, 21.3424 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="小entreR" type="CollisionShape2D" parent="StaticBody2D" index="9"]
shape = SubResource( 12 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D" index="10"]
shape = SubResource( 13 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D" index="11"]
shape = SubResource( 14 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D" index="12"]
position = Vector2( 0, -1.18921 )
shape = SubResource( 15 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D" index="13"]
shape = SubResource( 16 )

[node name="小entreL" type="CollisionShape2D" parent="StaticBody2D" index="14"]
shape = SubResource( 17 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D" index="15"]
shape = SubResource( 18 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D" index="16"]
shape = SubResource( 19 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D" index="17"]
position = Vector2( -746.519, 170.624 )
shape = SubResource( 20 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D" index="18"]
shape = SubResource( 21 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="StaticBody2D" index="19"]
shape = SubResource( 22 )

[node name="小entreL2" type="CollisionShape2D" parent="StaticBody2D" index="20"]
position = Vector2( -232.999, 63.9622 )
rotation = -0.401426
shape = SubResource( 23 )

[node name="小entreL3" type="CollisionShape2D" parent="StaticBody2D" index="21"]
position = Vector2( 233.004, 63.9653 )
rotation = 0.401426
shape = SubResource( 23 )

[node name="Anim" type="AnimatedSprite" parent="." index="9"]
position = Vector2( -2.27246, 526.311 )
scale = Vector2( 1.3, 1.3 )
z_index = 7
frames = SubResource( 24 )
animation = "standing"

[node name="Castle" type="Area2D" parent="." index="10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Castle" index="0"]
position = Vector2( -16.8945, 525.41 )
shape = SubResource( 25 )

[node name="Timer" type="Timer" parent="." index="11"]

[node name="Sprite5" type="Sprite" parent="." index="12"]
position = Vector2( -0.841003, 527.674 )
scale = Vector2( 1.3, 1.3 )
z_index = -1
texture = ExtResource( 13 )

[node name="AreaZm" type="Area2D" parent="." index="13"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaZm" index="0"]
position = Vector2( 0.00012207, 223.446 )
rotation = 1.5708
shape = SubResource( 26 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="area_entered" from="BiteArea" to="." method="_on_BiteArea_area_entered"]
[connection signal="area_exited" from="BiteArea" to="." method="_on_BiteArea_area_exited"]
[connection signal="area_entered" from="Castle" to="." method="_on_Castle_area_entered"]
[connection signal="area_exited" from="Castle" to="." method="_on_Castle_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="AreaZm" to="." method="_on_AreaZm_body_entered"]
